--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   </modules>
   
   <properties>
-    <scala.version>2.8.0.Beta1-RC6</scala.version>
+    <scala.version>2.8.0.Beta1</scala.version>
   </properties>
   
   <repositories>
@@ -22,6 +22,11 @@
       <id>scala-tools.org</id>
       <name>Scala-Tools Maven2 Repository</name>
       <url>http://scala-tools.org/repo-releases</url>
+    </repository>
+    <repository>
+      <id>scala-tools.org-snapshots</id>
+      <name>Scala-Tools Maven2 Snapshots</name>
+      <url>http://scala-tools.org/repo-snapshots</url>
     </repository>
   </repositories>
   
